test/invalid/baseline/maplike-1type.txt
Syntax error at line 2, since `interface MapLikeOneType`:
  maplike<long>;
              ^ Missing second type argument in maplike declaration
